# ash

./: CMakeLists.txt  README.md
include/: lexer.h  parser.h
src/: lexer.c  main.c  parser.c
